crates/plotnik-tests/tests/03-analyze/anchors/nullable_neighbor_exposes_leading_anchor.txt
Q = {
  (a)?
  .
  (b)
}
------------------ DIAGNOSTICS -------------------
error: anchor needs an enclosing node
 --> query.ptk:3:3
  |
3 |   .
  |   ^
  |
help: wrap in a named node: `(parent . (child))`
-------------------- SYMBOLS ---------------------
